--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,5 @@
-# See http://help.github.com/ignore-files/ for more about ignoring files.
-
-# Compiled output
-/dist
-/tmp
-/out-tsc
-/bazel-out
-
-# Node
-/node_modules
-npm-debug.log
-yarn-error.log
+frontend/.angular/
+frontend/node_modules
 
 # IDEs and editors
 .idea/
