backend with password and token

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,4 +8,8 @@ spring.datasource.username=root
 spring.datasource.password=dbroot
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
-openrunning.frontend.url=http://localhost:4200
+frontend.url=http://localhost:4200
+# Key with 16 characters length used to generate authentication tokens
+security.key=openrunningback0
+# Salt used to generate authentication tokens
+security.salt=openrunning2023
