--- a/gpxprocessor/src/main/resources/application.properties
+++ b/gpxprocessor/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 
 spring.datasource.url=jdbc:mariadb://127.0.0.1:3306/openrunning?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
