add the model project to the backend dependency

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ backend/upload-dir/
 *.sublime-workspace
 
 # Visual Studio Code
+**/*.code-workspace
 */.vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
