--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -13,6 +13,12 @@
         <springboot.version>3.1.1</springboot.version>
     </properties>
     <dependencies>
+        <!-- model of the database -->
+        <dependency>
+            <groupId>fr.openrunning</groupId>
+            <artifactId>model</artifactId>
+            <version>${project.version}</version>
+        </dependency>
         <!-- creating a REST API -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
