--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -63,6 +63,13 @@
             <version>${springboot.version}</version>
             <scope>test</scope>
         </dependency>
+        <!-- Database for Unit tests -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.2.222</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
