--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -35,6 +35,8 @@ services:
       dockerfile: docker/backend.dockerfile
     depends_on:
       - database
+    ports:
+      - 8080:8080
     restart: always
 
   frontend:
