backend save gpxfiles to the user directory

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ frontend/dist
 gpxprocessor/activities*
 backend/upload-dir/
 
+dist
 db_data
 
 # IDEs and editors
@@ -19,11 +20,7 @@ db_data
 
 # Visual Studio Code
 **/*.code-workspace
-*/.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
+.vscode
 .history/*
 
 # Miscellaneous
