--- a/model/pom.xml
+++ b/model/pom.xml
@@ -8,7 +8,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>model</name>
     <properties>
-        <java.version>17</java.version>
+    <maven.compiler.release>17</maven.compiler.release>
         <slf4j.version>2.0.7</slf4j.version>
         <springboot.version>3.1.1</springboot.version>
     </properties>
@@ -23,7 +23,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.28</version>
+            <version>1.18.30</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
@@ -37,9 +37,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
-                <configuration>
-                    <release>${java.version}</release>
-                </configuration>
             </plugin>
         </plugins>
     </build>
