--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,16 +6,24 @@ services:
       MARIADB_ROOT_PASSWORD: ${E_DB_ROOT_PASSWORD}
       MARIADB_DATABASE: ${E_DB_DATABASE}
     volumes:
-      - ./docker/files/init.sql:/docker-entrypoint-initdb.d/00-create-tables.sql
+      - ./database/init.sql:/docker-entrypoint-initdb.d/00-create-tables.sql
       - ./db_data:/var/lib/mysql
     ports:
       - 3333:3306
     restart: always
 
+  processor:
+    build:
+      context: .
+      dockerfile: gpxprocessor/docker/processor.dockerfile
+    depends_on:
+      - database
+    restart: always
+
   backend:
     build:
       context: .
-      dockerfile: docker/backend.dockerfile
+      dockerfile: backend/docker/backend.dockerfile
     depends_on:
       - database
     ports:
@@ -25,7 +33,7 @@ services:
   frontend:
     build:
       context: .
-      dockerfile: docker/frontend.dockerfile
+      dockerfile: frontend/docker/frontend.dockerfile
     depends_on:
       - backend
     ports:
