--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 spring.jpa.show-sql=true
 
-spring.datasource.url=jdbc:mariadb://localhost:3333/openrunning?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mariadb://${DB_HOST}:${DB_PORT}/${DB_DATABASE}?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=dbroot
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
