use env variables to configure the processor database connection

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 E_DB_HOST=database
 E_DB_PORT=3306
-E_DB_USER=dbuser
+E_DB_USER=root
 E_DB_ROOT_PASSWORD=dbroot
 E_DB_DATABASE=openrunning
 E_FRONTEND_HOST=localhost
