--- a/gpxprocessor/src/main/resources/application.properties
+++ b/gpxprocessor/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 spring.jpa.show-sql=false
 
-spring.datasource.url=jdbc:mariadb://172.18.0.1:3333/openrunning?allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=dbroot
+spring.datasource.url=jdbc:mariadb://${DB_HOST:localhost}:${DB_PORT:3333}/${DB_DATABASE:openrunning}?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.username=${DB_USER:root}
+spring.datasource.password=${DB_PASSWORD:dbroot}
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 # URL used to build the Allow-Origin header
