--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 spring.jpa.show-sql=true
 
 spring.datasource.url=jdbc:mariadb://${DB_HOST:localhost}:${DB_PORT:3333}/${DB_DATABASE:openrunning}?allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=dbroot
+spring.datasource.username=${DB_USER:root}
+spring.datasource.password=${DB_PASSWORD:dbroot}
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 # URL used to build the Allow-Origin header
