--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,6 +16,12 @@ services:
     build:
       context: .
       dockerfile: gpxprocessor/docker/processor.dockerfile
+    environment:
+      DB_HOST: ${E_DB_HOST}
+      DB_PORT: ${E_DB_PORT}
+      DB_USER: ${E_DB_USER}
+      DB_ROOT_PASSWORD: ${E_DB_ROOT_PASSWORD}
+      DB_DATABASE: ${E_DB_DATABASE}
     depends_on:
       - database
     restart: always
