detect gpxfiles in user directories

--- a/gpxprocessor/src/main/resources/application.properties
+++ b/gpxprocessor/src/main/resources/application.properties
@@ -1,16 +1,14 @@
+# Database library configuration
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 spring.jpa.show-sql=false
 
+# Database connection configuration
 spring.datasource.url=jdbc:mariadb://${DB_HOST:localhost}:${DB_PORT:3333}/${DB_DATABASE:openrunning}?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=${DB_USER:root}
 spring.datasource.password=${DB_PASSWORD:dbroot}
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
-# URL used to build the Allow-Origin header
-frontend.url=http://localhost:4200
-# Key with 16 characters length used to generate authentication tokens
-security.key=openrunningback0
-# Salt used to generate authentication tokens
-security.salt=openrunning2023
+# Root directory containing the GPX files
+filesystem.rootdir = "gpxfiles"
