FIX springboot service detection

--- a/gpxprocessor/src/main/resources/application.properties
+++ b/gpxprocessor/src/main/resources/application.properties
@@ -11,4 +11,4 @@ spring.datasource.password=${DB_PASSWORD:dbroot}
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 # Root directory containing the GPX files
-filesystem.rootdir = "gpxfiles"
+filesystem.rootdir = gpxfiles
