FIX GPX files root directory

--- a/backend/src/test/resources/application.properties
+++ b/backend/src/test/resources/application.properties
@@ -14,3 +14,5 @@ frontend.url=http://localhost:4200
 security.key=openrunningback0
 # Salt used to generate authentication tokens
 security.salt=openrunning2023
+# Root directory containing the GPX files
+filesystem.rootdir = gpxtesting
