--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
       MARIADB_DATABASE: ${E_DB_DATABASE}
     volumes:
       - ./database/init.sql:/docker-entrypoint-initdb.d/00-create-tables.sql
-      - ./db_data:/var/lib/mysql
+      - dbdata:/var/lib/mysql
     ports:
       - 3333:3306
     restart: always
@@ -22,6 +22,8 @@ services:
       DB_USER: ${E_DB_USER}
       DB_ROOT_PASSWORD: ${E_DB_ROOT_PASSWORD}
       DB_DATABASE: ${E_DB_DATABASE}
+    volumes:
+      - gpxfiles:/root/gpxfiles
     depends_on:
       - database
     restart: always
@@ -36,6 +38,8 @@ services:
       DB_USER: ${E_DB_USER}
       DB_ROOT_PASSWORD: ${E_DB_ROOT_PASSWORD}
       DB_DATABASE: ${E_DB_DATABASE}
+    volumes:
+      - gpxfiles:/root/gpxfiles
     depends_on:
       - database
     ports:
@@ -51,3 +55,7 @@ services:
     ports:
       - 4200:80
     restart: always
+
+volumes:
+  dbdata:
+  gpxfiles:
